# storage/api-docs/api-docs.json
@@ -13,7 +13,7 @@
     },
     "servers": [
         {
-            "url": "http://localhost/api",
+            "url": "https://guehakosu.beget.app/api/",
             "description": "Doc-Configurator host"
         }
     ],
@@ -28,7 +28,7 @@
                 "parameters": [
                     {
                         "name": "document",
-                        "in": "query",
+                        "in": "path",
                         "description": "The document id",
                         "required": false,
                         "schema": {
@@ -68,10 +68,5 @@
                 ]
             }
         }
-    },
-    "tags": [
-        {
-            "name": "Documents"
-        }
-    ]
+    }
 }
